# llm-wiki-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.zh-Hans.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
docs/: commands.md  development.md  hooks.md  installation.md  project-layout.md
docs/en/: commands.md  development.md  hooks.md  installation.md  project-layout.md
docs/es/: commands.md  development.md  hooks.md  installation.md  project-layout.md
docs/fr/: commands.md  development.md  hooks.md  installation.md  project-layout.md
docs/ja/: commands.md  development.md  hooks.md  installation.md  project-layout.md
docs/ko/: commands.md  development.md  hooks.md  installation.md  project-layout.md
docs/plans/: korean-search-and-enforcement.md
docs/zh-Hans/: commands.md  development.md  hooks.md  installation.md  project-layout.md
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json  pre-tool-use.sh  session-start.sh  stop.sh  (+1 more)
tests/: test_acceptance.py  test_archive.py  test_bootstrap.py  test_cli_output_safety.py  test_codex_hook.py  test_codex_plugin.py  test_config.py  test_git_file_modes.py  test_graph.py  test_health.py  test_hook.py  test_hook_state.py  test_indexer.py  test_ingest.py  test_korean.py  test_lint.py  test_locks.py  test_mcp_server.py  test_parser.py  test_paths.py  test_queries.py  test_read.py  test_related.py  test_release_consistency.py  test_search.py  test_status.py  test_writer.py
(+62 files in other folders)
