[project]
name = "llmw"
version = "0.1.14"
description = "Headless Obsidian-like LLM Wiki CLI for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
llmw = "llmw.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llmw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
